--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Questrial|Share+Tech+Mono" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
